[tool.poetry]
name = "imagenet-testbed-website"
version = "0.1.0"
description = ""
authors = ["Anthony Chiu <kingychiu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
